# Project-Stubs

./: README.md
C++/: c_cpp_properties.json
C++/hack/: CMakeLists.txt
C++/hack_multi/: CMakeLists.txt
C++/large/: .appveyor.yml  CMakeLists.txt
C++/large/libs/: CMakeLists.txt
C++/large/libs/LibraryName/: CMakeLists.txt
C++/large/libs/LibraryName/tests/: CMakeLists.txt
C++/large/tests/: CMakeLists.txt
C++/large_test/: CMakeLists.txt
C++/large_test/include/: toplevel.hpp
C++/large_test/libs/LibraryOne/: CMakeLists.txt
C++/large_test/libs/LibraryOne/include/LibraryOne/: one.hpp
C++/large_test/libs/LibraryOne/src/: one.cpp
C++/large_test/libs/LibraryOne/tests/: CMakeLists.txt  test_one.cpp
C++/large_test/libs/LibraryTwo/: CMakeLists.txt
C++/large_test/libs/LibraryTwo/include/LibraryTwo/: two.hpp
C++/large_test/libs/LibraryTwo/src/: two.cpp
C++/large_test/libs/LibraryTwo/tests/: CMakeLists.txt  test_two.cpp
C++/large_test/src/: main.cpp  toplevel.cpp
C++/large_test/tests/: CMakeLists.txt  test_toplevel.cpp  tests_main.cpp
C++/small/: .clang-tidy  CMakeLists.txt
C++/small/tests/: CMakeLists.txt
embedded/CMake_CMSIS_Blinky/: CMakeLists.txt  TM4C123.ld  gdbinit  readme.md  tm4c123.cmake
embedded/CMake_CMSIS_Blinky/src/: main.cpp  startup_TM4C123.S  startup_TM4C123.c
